--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/master/base.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/master/base.xhtml
@@ -25,7 +25,7 @@
 	    		<div id="header">
 	    			<div id="menu-header">
 	    				<div id="logo-area" class="cf">
-	    					<div id="logo">UK</div>
+	    					<div id="logo">勤次郎</div>
 	    					<div id="user-info" class="cf">
 	    						<div id="company" class="cf"></div>
 	    						<div id="user" class="cf"></div>
