--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/master/base.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/master/base.xhtml
@@ -42,7 +42,7 @@
 	    	</ui:insert>
     	</div>
         <div data-bind="with: kiban.errorDialogViewModel">
-			<div data-bind="ntsErrorDialog: {title: title, errors: errors, option: option}"></div>
+			<div data-bind="ntsErrorDialog: {title: title, errors: displayErrors, option: option}"></div>
  			<div id="func-notifier-errors" data-bind="css: { shown: occurs }, click: open">エラーがあります</div>
         </div>
     </h:body>
