--- a/nts.uk/uk.mobile/ClientApp/index.html
+++ b/nts.uk/uk.mobile/ClientApp/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>UK Mobile</title>
     <base href="/nts.uk.mobile.web" />
     <link rel="shortcut icon" href="/nts.uk.mobile.web/dist/favicon.ico">
@@ -13,9 +13,6 @@
 
 <body>
     <div class="container-fluid">
-        <router-link to="/">Home</router-link>|
-        <router-link to="/about/me">About</router-link>
-
         <router-view />
     </div>
     <script src="/nts.uk.mobile.web/dist/vendor.js" type="text/javascript"></script>
