--- a/nts.uk/uk.mobile/ClientApp/index.html
+++ b/nts.uk/uk.mobile/ClientApp/index.html
@@ -13,21 +13,25 @@
 
 <body>
     <div id="app_uk_mobile">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
             <router-link :to="'/'" :class="'navbar-brand'">{{'app_name'|i18n}}</router-link>
-            <button class="navbar-toggler" type="button">
+            <!--<button class="navbar-toggler" type="button">
                 <span class="navbar-toggler-icon"></span>
-            </button>
-
+            </button>-->
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
                         <router-link :to="'/documents'" :class="'nav-link'">{{'documents' | i18n}}</router-link>
                     </li>
                 </ul>
+                <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
+                    <language-bar :button="true" />
+                </ul>
             </div>
         </nav>
-        <router-view :class="'container-fluid'" />
+        <div class="container-fluid">
+            <router-view />
+        </div>
     </div>
     <script src="/nts.uk.mobile.web/dist/vendor.js" type="text/javascript"></script>
     <script src="/nts.uk.mobile.web/dist/bundles.js" type="text/javascript"></script>
