update button toggler for menu top

--- a/nts.uk/uk.mobile/ClientApp/index.html
+++ b/nts.uk/uk.mobile/ClientApp/index.html
@@ -15,9 +15,9 @@
     <div id="app_uk_mobile">
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
             <router-link to="/" class="navbar-brand">{{'app_name'|i18n}}</router-link>
-            <!--<button class="navbar-toggler" type="button">
+            <button class="navbar-toggler" type="button">
                 <span class="navbar-toggler-icon"></span>
-            </button>-->
+            </button>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
