--- a/nts.uk/uk.mobile/ClientApp/index.html
+++ b/nts.uk/uk.mobile/ClientApp/index.html
@@ -24,7 +24,7 @@
                         <router-link to="/documents/html" class="nav-link">{{'documents' | i18n}}</router-link>
                     </li>
                 </ul>
-                <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
+                <ul class="navbar-nav">
                     <language-bar />
                 </ul>
             </div>
