--- a/nts.uk/uk.mobile/ClientApp/index.html
+++ b/nts.uk/uk.mobile/ClientApp/index.html
@@ -14,7 +14,7 @@
 <body>
     <div id="app_uk_mobile">
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-            <router-link to="/" class="navbar-brand">{{'app_name'|i18n}}</router-link>
+            <a href="javascript: void(0);" class="navbar-brand">{{ pgName | i18n }}</a>
             <button class="navbar-toggler" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button>
