--- a/nts.uk/uk.mobile/ClientApp/index.html
+++ b/nts.uk/uk.mobile/ClientApp/index.html
@@ -14,9 +14,14 @@
 <body>
     <div id="app_uk_mobile">
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-            <a href="javascript: void(0);" class="navbar-brand">{{ pgName | i18n }}</a>
+            <button type="button" class="navbar-btn d-md-none">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <a href="javascript: void(0)" class="navbar-brand">{{pgName |i18n}}</a>
             <button class="navbar-toggler" type="button">
-                <span class="navbar-toggler-icon"></span>
+                <i class="fas fa-caret-down"></i>
             </button>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav mr-auto">
@@ -29,8 +34,15 @@
                 </ul>
             </div>
         </nav>
-        <div class="container-fluid">
-            <router-view />
+        <div class="wrapper">
+            <nav id="sidebar">
+                <div class="sidebar-header">
+                    <h3>Bootstrap Sidebar</h3>
+                </div>
+            </nav>
+            <div class="container-fluid">
+                <router-view />
+            </div>
         </div>
     </div>
     <script src="/nts.uk.mobile.web/dist/vendor.js" type="text/javascript"></script>
