--- a/nts.uk/uk.mobile/ClientApp/index.html
+++ b/nts.uk/uk.mobile/ClientApp/index.html
@@ -13,73 +13,15 @@
 
 <body>
     <div id="app_uk_mobile">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-            <button type="button" class="navbar-btn d-md-none">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
-            <a href="javascript: void(0)" class="navbar-brand">{{pgName |i18n}}</a>
-            <button class="navbar-toggler dropdown-toggle" type="button"></button>
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <router-link to="/documents/html" class="nav-link">{{'documents' | i18n}}</router-link>
-                    </li>
-                </ul>
-                <ul class="navbar-nav">
-                    <language-bar />
-                </ul>
-            </div>
-        </nav>
+        <nav-bar></nav-bar>
         <div class="wrapper">
-            <nav class="sidebar">
-                <div class="sidebar-header">
-                    <h3>{{'app_name' | i18n}}</h3>
-                </div>
-                <ul class="list-unstyled components">
-                    <li class="active">
-                        <a class="dropdown-toggle collapse">Home</a>
-                        <ul class="collapse list-unstyled show">
-                            <li>
-                                <a href="#">Home 1</a>
-                            </li>
-                            <li>
-                                <a href="#">Home 2</a>
-                            </li>
-                            <li>
-                                <a href="#">Home 3</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">About</a>
-                        <a  class="dropdown-toggle collapse">Pages</a>
-                        <ul class="collapse list-unstyled">
-                            <li>
-                                <a href="#">Page 1</a>
-                            </li>
-                            <li>
-                                <a href="#">Page 2</a>
-                            </li>
-                            <li>
-                                <a href="#">Page 3</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">Portfolio</a>
-                    </li>
-                    <li>
-                        <a href="#">Contact</a>
-                    </li>
-                </ul>
-            </nav>
+            <side-bar></side-bar>
             <div class="container-fluid">
                 <router-view />
             </div>
         </div>
     </div>
+    <div id="masklayer"></div>
     <script src="/nts.uk.mobile.web/dist/vendor.js" type="text/javascript"></script>
     <script src="/nts.uk.mobile.web/dist/bundles.js" type="text/javascript"></script>
 </body>
