--- a/nts.uk/uk.mobile/ClientApp/index.html
+++ b/nts.uk/uk.mobile/ClientApp/index.html
@@ -21,6 +21,7 @@
             </div>
         </div>
     </div>
+    <div id="uk_picker"></div>
     <div id="masklayer"></div>
     <script src="/nts.uk.mobile.web/dist/vendor.js" type="text/javascript"></script>
     <script src="/nts.uk.mobile.web/dist/bundles.js" type="text/javascript"></script>
