--- a/nts.uk/uk.mobile/ClientApp/index.html
+++ b/nts.uk/uk.mobile/ClientApp/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="theme-color" content="#5DA797" class="next-head">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>UK Mobile</title>
     <base href="/nts.uk.mobile.web" />
