add version to resource (for reset cache)
- add version to resource link
- remove map file for resource

--- a/nts.uk/uk.mobile/ClientApp/index.html
+++ b/nts.uk/uk.mobile/ClientApp/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>UK Mobile</title>
     <base href="/nts.uk.mobile.web" />
-    <link rel="shortcut icon" href="/nts.uk.mobile.web/dist/favicon.ico">
-    <link rel="stylesheet" href="/nts.uk.mobile.web/dist/vendor.css" />
-    <link rel="stylesheet" href="/nts.uk.mobile.web/dist/bundles.css" />
+    <link rel="shortcut icon" href="/nts.uk.mobile.web/dist/favicon.ico?v=0000000000000">
+    <link rel="stylesheet" href="/nts.uk.mobile.web/dist/vendor.css?v=0000000000000" />
+    <link rel="stylesheet" href="/nts.uk.mobile.web/dist/bundles.css?v=0000000000000" />
 </head>
 
 <body>
@@ -22,8 +22,8 @@
             </div>
         </div>
     </div>
-    <script src="/nts.uk.mobile.web/dist/vendor.js" type="text/javascript"></script>
-    <script src="/nts.uk.mobile.web/dist/bundles.js" type="text/javascript"></script>
+    <script src="/nts.uk.mobile.web/dist/vendor.js?v=0000000000000" type="text/javascript"></script>
+    <script src="/nts.uk.mobile.web/dist/bundles.js?v=0000000000000" type="text/javascript"></script>
 </body>
 
 </html>
