--- a/nts.uk/uk.mobile/ClientApp/index.html
+++ b/nts.uk/uk.mobile/ClientApp/index.html
@@ -17,7 +17,7 @@
         <nav-bar></nav-bar>
         <div class="wrapper">
             <side-bar></side-bar>
-            <div class="container-fluid">
+            <div class="container-fluid px-3">
                 <router-view />
             </div>
         </div>
